2025-11-10  Oliver Kiddle  <opk@zsh.org>

	* 53438: Doc/Zsh/params.yo, Doc/Zsh/zle.yo, Src/Zle/termquery.c,
	Src/Zle/zle.h, Src/Zle/zle_refresh.c, Src/Zle/zle_vi.c, Src/init.c,
	Src/zsh.h: support for changing terminal cursor shape and colour

	* 53404: Doc/Zsh/params.yo, Src/Zle/termquery.c, Src/Zle/zle_main.c,
	Src/builtin.c, Src/init.c, Src/input.c, Src/loop.c, Src/prompt.c,
	Src/subst.c, Src/utils.c, Src/zsh.h, Test/X04zlehighlight.ztst,
	Test/X06termquery.ztst: terminal integration with semantic markers

	* 53379, 53380: Doc/Zsh/params.yo, Test/X04zlehighlight.ztst,
	Src/prompt.c: autoload nearcolor based on truecolor detection

	* 53377: Doc/Zsh/zle.yo, Src/Zle/termquery.c, Src/Zle/zle_misc.c,
	Src/Zle/zle_utils.c, Test/X06termquery.ztst: support OSC52 paste
	sequence with the "* and "+ vi registers

	* 53372, 53375: Doc/Zsh/params.yo, Src/Zle/termquery.c,
	Src/Zle/zle.mdd, Src/Zle/zle_main.c, Test/X04zlehighlight.ztst,
	Test/X06termquery.ztst: query terminal properties on ZLE startup

2025-11-09  Bart Schaefer  <schaefer@zsh.org>

	* Philippe: 54057: Src/params.c, Src/zsh.h, Test/K01nameref.ztst:
	add VALFLAG_REFSLICE to enable assignment through named reference
	to change type of the referent

2025-11-03  Oliver Kiddle  <opk@zsh.org>

	* Christopher Bock: github #148: Completion/Unix/Command/_fortune:
	complete fortune databases

	* 54022: Completion/BSD/Command/_fw_update,
	Completion/BSD/Command/_rcctl, Completion/Unix/Command/_sysctl,
	Completion/Unix/Command/_watch: completion updates for openbsd 7.8

	* 54020: configure.ac: add library for network support on Haiku OS

	* 54019: configure.ac, Makefile.in, Src/params.c, Test/ztst.zsh,
	Src/Builtins/rlimits.c, Src/Modules/curses.mdd: AIX support fixes

2025-10-31  Bart Schaefer  <schaefer@zsh.org>

	* Jim Murphy: 53783: Functions/Prompts/prompt_adam2_setup,
	Functions/Prompts/prompt_special_chars: use case-insensitive
	search for more variants of language files

2025-10-31  Oliver Kiddle  <opk@zsh.org>
