@@ -1,5 +1,10 @@
 2025-11-10  Oliver Kiddle  <opk@zsh.org>
 
+	* 53402, 54042: Src/Zle/termquery.c, Src/Zle/zle_main.c,
+	Doc/Zsh/params.yo, Doc/Zsh/zle.yo: make timeout for terminal queries
+	configurable via a .term.querywait variable, clarify documentation
+	and include fewer of the new extensions by default
+
 	* 53438: Doc/Zsh/params.yo, Doc/Zsh/zle.yo, Src/Zle/termquery.c,
 	Src/Zle/zle.h, Src/Zle/zle_refresh.c, Src/Zle/zle_vi.c, Src/init.c,
 	Src/zsh.h: support for changing terminal cursor shape and colour
